# robinhood

./: .gitignore  LICENSE  README.md  __init__.py  dash.py  f_utils.py  ingest.py  module1.ipynb  requirements.txt  robinhood.py  setup.cfg  setup.py  temp-plot.html  token.txt  visualize.py
course_milestone/: fifth.py  first.py  fourth.py  second.py  sixth.py  third.py
data/: stocks.txt
my_dash_app/: dash.py
notebooks/: 1. Portfolio Metrics.ipynb  Robinhood.ipynb  robinhood.py
src/robinassistant/: ingest.py
src/robinassistant.egg-info/: PKG-INFO  SOURCES.txt
src/robinassistant/utils/: finance_utils.py  visualize.py  yahoodownloader.py
test/: .coverage  test_all.py
tests/: test_all.py
