[metadata]
name = robinassistant-mtaruno
version = 0.0.1
author = Matthew Taruno
author_email = matthew.taruno@gmail.com
description = Matthews personal stock market trading and investing assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = robinassistant